# burnout-detector

./: .gitignore  Cargo.toml  FUNDING.yml  Makefile  README.md
src/: main.rs
src/alert/: mod.rs
src/helpers/: mod.rs
src/logic/: alert.rs  mod.rs  status.rs
src/status/: mod.rs
src/wayland/: mod.rs
